--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
   "files": [
     "index.js"
   ],
-  "main": "index.js",
+  "main": "lib/index.js",
   "engines": {
     "node": ">=0.10.0"
   },
   "dependencies": {
-    "jn-each": "^0.1.1",
     "jquery": "^2.2.3"
   }
 }
